# palmtop

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bootstrap_macos.sh  bootstrap_termux.sh  config.example.toml  docker-compose.yml  pyproject.toml  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.html  configuration.html  delegation-workflow.md  index.html  quickstart.html
docs/assets/: style.css
docs/engine/: core_engine.py
docs/plans/: twy_goals.example.json
scripts/: audit_supply_chain.py  git-post-receive.sh  setup-boot.sh  setup-git-server.sh  setup-tunnel.sh
src/palmtop/: __init__.py  __main__.py  backup.py  brand.py  logging.py  persona.py  secrets.py
src/palmtop/admin/: health.py
src/palmtop/channels/: auth.py  base.py  discord.py  email.py  irc.py  matrix.py  runner.py  scuttlebot.py  slack.py  sms.py  sms_listener.py  telegram.py  whatsapp.py  xmpp.py
src/palmtop/config/: settings.py
src/palmtop/core/: alignment_judge.py  blessing.py  engine.py  evaluator.py  goal_aligner.py  goals_paths.py  loop.py  orchestration.py  router.py  safety.py  sovereign_runner.py  tracing.py
src/palmtop/cursor/: __init__.py  client.py  jira_bridge.py  runner.py
src/palmtop/engine/: __main__.py
src/palmtop/hermes/: __init__.py  client.py
src/palmtop/inference/: base.py  budget.py  cloud.py  engine_llm.py  local.py
src/palmtop/mcp/: atlassian_server.py  client.py  gateway.py  server.py  twelvewy.py  twelvewy_http.py
src/palmtop/memory/: conversation.py
src/palmtop/tools/: base.py  calendar.py  cursor_delegate.py  deploy_blessing.py  email.py  files.py  google_auth.py  jira.py  knowledge.py  railway.py  reminders.py  vercel.py  web_search.py
src/palmtop/web/: agent.py  app.py  blog.py  outreach.py
src/pocket_agent/: __init__.py  persona.py
src/pocket_agent/channels/: sms.py  sms_listener.py  telegram.py
src/pocket_agent/cursor/: __init__.py  jira_bridge.py  runner.py
src/pocket_agent/engine/: __main__.py
src/pocket_agent/inference/: cloud.py  engine_llm.py  local.py
src/pocket_agent/knowledge/: store.py
src/pocket_agent/mcp/: atlassian_server.py  client.py  gateway.py  server.py  twelvewy.py  twelvewy_http.py
tests/: test_agent_loop_alignment.py  test_autonomy_requirements.py  test_backup.py  test_backup_encryption.py  test_blessing.py  test_blog.py  test_budget.py  test_channel_auth.py  test_channel_runner.py  test_config_settings.py  test_core_engine.py  test_cursor_client.py  test_cursor_runner.py  test_deploy_blessing.py  test_email_channel.py  test_email_tool.py  test_engine_cli.py  test_engine_trigger.py  test_files.py  test_goal_aligner.py  test_hermes_client.py  test_logging.py  test_matrix_channel.py  test_mcp_client.py  test_outreach.py  test_railway_tool.py  test_safety.py  test_scuttlebot_channel.py  test_secrets.py  test_slack_channel.py  test_supply_chain_audit.py  test_telegram_formatting.py  test_twelvewy_http.py  test_vercel_tool.py  test_whatsapp_channel.py  test_xmpp_channel.py
(+29 files in other folders)
