[project]
name = "pocket-agent"
version = "0.1.0"
description = "Self-hosted personal AI agent with cascading inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-cpp-python>=0.3.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0;python_version<'3.12'",
    "tomli-w>=1.0.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=22.0"]
cloud = ["anthropic>=0.50.0"]
atlassian = ["atlassian-python-api>=3.41.0"]
web = ["starlette>=0.40.0", "uvicorn>=0.30.0"]
observability = ["langfuse>=4.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]
all = ["pocket-agent[telegram,cloud,atlassian,web,observability]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pocket_agent"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
