[project]
name = "palmtop"
version = "0.1.0"
description = "Self-hosted personal AI agent with cascading inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-cpp-python>=0.3.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0;python_version<'3.12'",
    "tomli-w>=1.0.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=22.0"]
discord = ["discord.py>=2.3.0"]
slack = ["slack-bolt>=1.18.0"]
matrix = ["matrix-nio>=0.24.0"]
xmpp = ["slixmpp>=1.8.0"]
cloud = ["anthropic>=0.50.0"]
atlassian = ["atlassian-python-api>=3.41.0"]
web = ["starlette>=0.40.0", "uvicorn>=0.30.0"]
observability = ["langfuse>=4.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]
all = ["palmtop[telegram,discord,slack,matrix,xmpp,cloud,atlassian,web,observability]"]

[project.scripts]
palmtop = "palmtop.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/palmtop"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E741", "N818"]

[tool.ruff.lint.per-file-ignores]
"src/palmtop/brand.py" = ["E501"]  # inline HTML templates
"src/palmtop/tools/base.py" = ["E501"]  # docstring examples
"src/palmtop/tools/jira.py" = ["E501"]  # usage strings
"src/palmtop/mcp/atlassian_server.py" = ["E501"]  # API descriptions
"tests/test_telegram_html.py" = ["E402"]  # importorskip must precede import
"tests/test_discord_channel.py" = ["E402"]  # importorskip must precede import
"tests/test_slack_channel.py" = ["E402"]  # importorskip must precede import
"tests/test_matrix_channel.py" = ["E402"]  # importorskip must precede import
"tests/test_xmpp_channel.py" = ["E402"]  # importorskip must precede import
"tests/test_supply_chain_audit.py" = ["E402"]  # sys.path insert must precede import

[tool.pytest.ini_options]
asyncio_mode = "auto"
